Made a new page.. in progress
had to add a new page, still adding content before I do any CSS styling.. there doesn't appear to be a CSS page either?

--- a/home.html
+++ b/home.html
@@ -15,6 +15,7 @@
     <a class="navigation" href="wellbeing.html">WELL-BEING</a><br>
     <a class="navigation" href="infographics.html">INFOGRAPHICS</a><br>
     <a class="navigation" href="resources.html">RESOURCES</a><br>
+    <a class="navigation" href="LifeAfterCovid.html"LIFE AFTER COVID</a><br>
 
 </center>
 </body>
