--- a/infographics.html
+++ b/infographics.html
@@ -1,23 +1,85 @@
-<html>
-<head>
-    <title>Infographics</title>
-</head>
+<!--CONTENT FOR IMAGE GALLERY-->      
+    <div class="container">
+        <div class="gallery-container"></div>
+        <h1>INFOGRAPHICS</h1>
+        <div class="gallery">
+            <input type="radio" name="controls" id="c1" checked>
+            <img src="Mythbuster.jpg" id="i1" class="gallery-image">
 
-<body>
-<center>
-<h1>INFOGRAPHICS</h1>
+            <input type="radio" name="controls" id="c2">
+            <img src="C19INFO.jpg" id="i2" class="gallery-image">
 
-<!-- links to downloadabe images or online pdf
-Covid timeline 
-Vaccines 
-Hygiene tips 
-Health care tips
-Mythbusters 
-etc
--->
+            <input type="radio" name="controls" id="c3">
+            <img src="INFO-CORONA1.jpg" id="i3" class="gallery-image">
+
+            <input type="radio" name="controls" id="c4">
+            <img src="Masks.jpg" id="i4" class="gallery-image">
+
+            <input type="radio" name="controls" id="c5">
+            <img src="Hotel.jpg" id="i5" class="gallery-image">
+
+            <input type="radio" name="controls" id="c6">
+            <img src="Gloves.jpg" id="i6" class="gallery-image">
+        </div>
+
+        <div class="thumbnails">
+            <label class="thumbnail-image" for="c1">
+                <img src="Mythbuster.jpg">
+            </label>
+
+            <label class="thumbnail-image" for="c2">
+                <img src="C19INFO.jpg">
+            </label>
+
+            <label class="thumbnail-image" for="c3">
+                <img src="INFO-CORONA1.jpg">
+            </label>
+
+            <label class="thumbnail-image" for="c4">
+                <img src="Masks.jpg">
+            </label>
+
+            <label class="thumbnail-image" for="c5">
+                <img src="Hotel.jpg">
+            </label>
+
+            <label class="thumbnail-image" for="c6">
+                <img src="Gloves.jpg">
+            </label>
+        </div>
+    </div>
+
+<!--FOOTER-->
+
+<footer class = "footer-position">
+    <div class="footer-container">
+      <div class="subscribe">
+        <h2>Subscribe to our page via Email for updates</h2>
+        <p>Blank blank fake contact information will go here</p>
+        <div class="subscribe-form">
+          <input type="text" placeholder="Email Address" />
+          <div class="btn">Subscribe</div>
+        </div>
+      </div>
+      <div class="footer-links">
+        <div class="col1">
+          <p>+1- fake number</p>
+          <p>fake info</p>
+          <p>fake info</p>
+        </div>
+        
+      </div>
+    </div>
+    <div class="socials">
+      &copy; Health Care Plus | Designed by Group 1
+
+      <div class="social-icons">
+        <img src="./images/instagram.png" alt="" />
+        <img src="./images/twitter.png" alt="" />
+        <img src="./images/fb.png" alt="" />
+      </div>
+    </div>
+  </footer>
 
 </body>
-<footer><a href="home.html">HOME</a></footer>
-</center>
-
 </html>
